--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Responsive layout</title>
 </head>
 <body>
+
+    <header>
+        <div class="topbar">
+            <div class="container">
+                <div class="row flex space-between">
+                    <div class="col debug debug-topbar">Logo</div>
+                    <div class="col debug debug-topbar">Menu</div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
     
 </body>
 </html>
