[Add] main - first section - container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="topbar">
-            <div class="container">
+            <div class="first container">
                 <div class="row flex space-between">
                     <div class="col debug debug-topbar">Logo</div>
                     <div class="col debug debug-topbar">Menu</div>
@@ -19,7 +19,18 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <section>
+            <div class="first container debug debug-container">
+                <div class="row flex">
+                    <div class="second container">
+                        <div class="col debug debug-first-col"> 1</div>
+                        <div class="col debug debug-first-col">2</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
     
