--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <div class="first container debug debug-container">
-                <div class="row flex">
+                <div class="row border-radius flex">
                     <div class="second container">
                         <div class="col debug debug-first-col"> 1</div>
                         <div class="col debug debug-first-col">2</div>
@@ -30,31 +30,43 @@
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row flex">
+                <div class="row border-radius flex">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row flex">
+                <div class="row border-radius flex">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row flex">
+                <div class="row border-radius flex">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row flex">
+                <div class="row border-radius flex">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="first container">
+                <div class="row">
+                    <div class="col debug debug-first-col">1</div>
+                    <div class="col debug debug-first-col">2</div>
+                </div>
+                <div class="row border-radius">
+                    <div class="col debug debug-first-col">1</div>
+                    <div class="col debug debug-first-col">2</div>
                 </div>
             </div>
         </section>
