--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <div class="first container debug debug-container">
-                <div class="row border-radius flex">
+                <div class="row border-radius flex direction-column">
                     <div class="second container">
                         <div class="col debug debug-first-col"> 1</div>
                         <div class="col debug debug-first-col">2</div>
@@ -30,28 +30,28 @@
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row border-radius flex">
+                <div class="row border-radius flex direction-column">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row border-radius flex">
+                <div class="row border-radius flex direction-column">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row border-radius flex">
+                <div class="row border-radius flex direction-column">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
                 </div>
             </div>
             <div class="first container debug debug-container">
-                <div class="row border-radius flex">
+                <div class="row border-radius flex direction-column">
                     <div class="second container">
                         <div class="col debug debug-col"> 1</div>
                     </div>
@@ -68,6 +68,18 @@
                     <div class="col debug debug-first-col">1</div>
                     <div class="col debug debug-first-col">2</div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col debug debug-col">1</div>
+                </div>
+                <div class="row border-radius debug flex direction-column">
+                    <div class="col debug debug-col-circle">1</div>
+                    <div class="col debug debug-col">2</div>
+                </div>
+
             </div>
         </section>
     </main>
