--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <section>
+        <section>  <!-- 1° SECTION -->
             <div class="first container debug debug-container">
                 <div class="row border-radius flex direction-column">
                     <div class="second container">
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section>  <!-- 2° SECTION -->
             <div class="first container">
                 <div class="row">
                     <div class="col debug debug-first-col">1</div>
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section>  <!-- 3° SECTION -->
             <div class="first container">
                 <div class="row">
                     <div class="col debug debug-col">1</div>
@@ -94,6 +94,59 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+        <section>  <!-- 4° SECTION -->
+            <div class="first container">
+                <div class="row border-radius">
+                    <div class="col debug debug-small-col">
+                        <div class="second container">
+                            1
+                        </div>
+                    </div>
+                </div>
+                <div class="row border-radius">
+                    <div class="col debug debug-col">
+                        <div class="second container">
+                            2
+                        </div>
+                    </div>
+                </div>
+                <div class="row border-radius">
+                    <div class="col debug debug-col">
+                        <div class="second container">
+                            2
+                        </div>
+                    </div>
+                </div>
+                <div class="row border-radius">
+                    <div class="col debug debug-col">
+                        <div class="second container">
+                            2
+                        </div>
+                    </div>
+                </div>
+                <div class="row border-radius">
+                    <div class="col debug debug-col">
+                        <div class="second container">
+                            2
+                        </div>
+                    </div>
+                </div>
+                <div class="row border-radius">
+                    <div class="col debug debug-col">
+                        <div class="second container">
+                            2
+                        </div>
+                    </div>
+                </div>
+                <div class="row border-radius">
+                    <div class="col debug debug-col">
+                        <div class="second container">
+                            2
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
