--- a/index.html
+++ b/index.html
@@ -115,36 +115,60 @@
                 <div class="row border-radius">
                     <div class="col debug debug-col">
                         <div class="second container">
-                            2
+                            3
                         </div>
                     </div>
                 </div>
                 <div class="row border-radius">
                     <div class="col debug debug-col">
                         <div class="second container">
-                            2
+                            4
                         </div>
                     </div>
                 </div>
                 <div class="row border-radius">
                     <div class="col debug debug-col">
                         <div class="second container">
-                            2
+                            5
                         </div>
                     </div>
                 </div>
                 <div class="row border-radius">
                     <div class="col debug debug-col">
                         <div class="second container">
-                            2
+                            6
                         </div>
                     </div>
                 </div>
                 <div class="row border-radius">
                     <div class="col debug debug-col">
                         <div class="second container">
-                            2
+                            7
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>  <!-- 5° SECTION -->
+            <div class="first container">
+                <div class="row">
+                    <div class="col debug debug-small-col">
+                        1
+                    </div>
+                <div class="row">
+                    <div class="col debug debug-col">
+                        2
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col debug debug-col">
+                        3
+                    </div>
+                </div>
+                <div class="row debug">
+                    <div class="col debug debug-col-circle"></div>
+                    <div class="col debug debug-col">
+                        4
                     </div>
                 </div>
             </div>
