[Add] 6° section and footer

--- a/index.html
+++ b/index.html
@@ -173,9 +173,26 @@
                 </div>
             </div>
         </section>
+        <section>  <!-- 6° SECTION -->
+            <div class="second container">
+                <div class="row">
+                    <div class="col debug debug-col">
+                    1    
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="first container">
+            <div class="row">
+                <div class="col debug debug-small-col">
+                    1
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
