[Edit] 1° section - first container

--- a/index.html
+++ b/index.html
@@ -21,39 +21,31 @@
 
     <main>
         <section>  <!-- 1° SECTION -->
-            <div class="first container debug debug-container">
-                <div class="row border-radius flex direction-column">
+            <div class="first container debug debug-container flex direction">
+                <div class="row border-radius">
                     <div class="second container">
                         <div class="col debug debug-first-col"> 1</div>
                         <div class="col debug debug-first-col">2</div>
                     </div>
                 </div>
-            </div>
-            <div class="first container debug debug-container">
-                <div class="row border-radius flex direction-column">
+                <div class="row border-radius">
                     <div class="second container">
-                        <div class="col debug debug-col"> 1</div>
+                        <div class="col debug debug-col"> 2</div>
                     </div>
                 </div>
-            </div>
-            <div class="first container debug debug-container">
-                <div class="row border-radius flex direction-column">
+                <div class="row border-radius">
                     <div class="second container">
-                        <div class="col debug debug-col"> 1</div>
+                        <div class="col debug debug-col"> 3</div>
                     </div>
                 </div>
-            </div>
-            <div class="first container debug debug-container">
-                <div class="row border-radius flex direction-column">
+                <div class="row border-radius">
                     <div class="second container">
-                        <div class="col debug debug-col"> 1</div>
+                        <div class="col debug debug-col"> 4</div>
                     </div>
                 </div>
-            </div>
-            <div class="first container debug debug-container">
-                <div class="row border-radius flex direction-column">
+                <div class="row border-radius">
                     <div class="second container">
-                        <div class="col debug debug-col"> 1</div>
+                        <div class="col debug debug-col"> 5</div>
                     </div>
                 </div>
             </div>
