[Remove] 1°- 6° section second container

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <header>
         <div class="topbar">
-            <div class="first container">
-                <div class="row flex space-between">
+            <div class="container">
+                <div class="row flex space-between ">
                     <div class="col debug debug-topbar">Logo</div>
                     <div class="col debug debug-topbar">Menu</div>
                 </div>
@@ -21,32 +21,22 @@
 
     <main>
         <section>  <!-- 1° SECTION -->
-            <div class="first container debug debug-container flex direction">
-                <div class="row border-radius">
-                    <div class="second container">
-                        <div class="col debug debug-first-col"> 1</div>
-                        <div class="col debug debug-first-col">2</div>
-                    </div>
+            <div class="container debug debug-container flex direction">
+                <div class="row card border-radius">
+                    <div class="col debug debug-first-col"> 1</div>
+                    <div class="col debug debug-first-col">2</div>
                 </div>
-                <div class="row border-radius">
-                    <div class="second container">
-                        <div class="col debug debug-col"> 2</div>
-                    </div>
+                <div class="row card border-radius">
+                    <div class="col debug debug-col"> 2</div>
                 </div>
-                <div class="row border-radius">
-                    <div class="second container">
-                        <div class="col debug debug-col"> 3</div>
-                    </div>
+                <div class="row card border-radius">
+                    <div class="col debug debug-col"> 3</div>
                 </div>
-                <div class="row border-radius">
-                    <div class="second container">
-                        <div class="col debug debug-col"> 4</div>
-                    </div>
+                <div class="row card border-radius">
+                    <div class="col debug debug-col"> 4</div>
                 </div>
-                <div class="row border-radius">
-                    <div class="second container">
-                        <div class="col debug debug-col"> 5</div>
-                    </div>
+                <div class="row card border-radius">
+                    <div class="col debug debug-col"> 5</div>
                 </div>
             </div>
         </section>
@@ -63,24 +53,24 @@
             </div>
         </section>
         <section>  <!-- 3° SECTION -->
-            <div class="first container">
+            <div class="container">
                 <div class="row">
                     <div class="col debug debug-col">1</div>
                 </div>
-                <div class="row border-radius debug flex direction-column">
-                    <div class="card second container">
+                <div class="row border-radius debug flex direction">
+                    <div class="card">
                         <div class="col debug debug-col-circle">1</div>
                         <div class="col debug debug-col">2</div>
                     </div>
                 </div>
-                <div class="row border-radius debug flex direction-column">
-                    <div class="card second container">
+                <div class="row border-radius debug flex direction">
+                    <div class="card">
                         <div class="col debug debug-col-circle">1</div>
                         <div class="col debug debug-col">2</div>
                     </div>
                 </div>
-                <div class="row border-radius debug flex direction-column">
-                    <div class="card second container">
+                <div class="row border-radius debug flex direction">
+                    <div class="card">
                         <div class="col debug debug-col-circle">1</div>
                         <div class="col debug debug-col">2</div>
                     </div>
@@ -89,52 +79,40 @@
             </div>
         </section>
         <section>  <!-- 4° SECTION -->
-            <div class="first container">
+            <div class="container">
                 <div class="row border-radius">
                     <div class="col debug debug-small-col">
-                        <div class="second container">
-                            1
-                        </div>
+                        1
                     </div>
                 </div>
-                <div class="row border-radius">
-                    <div class="col debug debug-col">
-                        <div class="second container">
+                <div class="cards">
+                    <div class="row card border-radius">
+                        <div class="col debug debug-col">
                             2
                         </div>
                     </div>
-                </div>
-                <div class="row border-radius">
-                    <div class="col debug debug-col">
-                        <div class="second container">
+                    <div class="row card border-radius">
+                        <div class="col debug debug-col">
                             3
                         </div>
                     </div>
-                </div>
-                <div class="row border-radius">
-                    <div class="col debug debug-col">
-                        <div class="second container">
+                    <div class="row card border-radius">
+                        <div class="col debug debug-col">
                             4
                         </div>
                     </div>
-                </div>
-                <div class="row border-radius">
-                    <div class="col debug debug-col">
-                        <div class="second container">
+                    <div class="row card border-radius">
+                        <div class="col debug debug-col">
                             5
                         </div>
                     </div>
-                </div>
-                <div class="row border-radius">
-                    <div class="col debug debug-col">
-                        <div class="second container">
+                    <div class="row card border-radius">
+                        <div class="col debug debug-col">
                             6
                         </div>
                     </div>
-                </div>
-                <div class="row border-radius">
-                    <div class="col debug debug-col">
-                        <div class="second container">
+                    <div class="row card border-radius">
+                        <div class="col debug debug-col">
                             7
                         </div>
                     </div>
@@ -142,31 +120,23 @@
             </div>
         </section>
         <section>  <!-- 5° SECTION -->
-            <div class="first container">
-                <div class="row">
-                    <div class="col debug debug-small-col">
-                        1
-                    </div>
-                <div class="row">
+            <div class="container">
+                <div class="row debug">
                     <div class="col debug debug-col">
-                        2
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis optio architecto dicta adipisci neque unde aliquam corporis illum error, quasi iure harum necessitatibus, quisquam est, eligendi nemo ad suscipit fugit?
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col debug debug-col">
-                        3
-                    </div>
-                </div>
+                
                 <div class="row debug">
                     <div class="col debug debug-col-circle"></div>
                     <div class="col debug debug-col">
-                        4
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis maxime sed aliquam excepturi, nesciunt numquam veritatis quod ex tempora, rem reiciendis vero accusantium rerum similique, autem ut. Est, at vel.
                     </div>
                 </div>
             </div>
         </section>
         <section>  <!-- 6° SECTION -->
-            <div class="second container">
+            <div class="container">
                 <div class="row">
                     <div class="col debug debug-col">
                     1    
@@ -177,7 +147,7 @@
     </main>
 
     <footer>
-        <div class="first container">
+        <div class="container">
             <div class="row">
                 <div class="col debug debug-small-col">
                     1
