[Edit] 1° section - 1 ° card

--- a/index.html
+++ b/index.html
@@ -29,10 +29,22 @@
 
     <main>
         <section>  <!-- 1° SECTION -->
-            <div class="container debug debug-container flex direction">
+            <div class="container direction">
                 <div class="row card border-radius">
-                    <div class="col debug debug-first-col"> 1</div>
-                    <div class="col debug debug-first-col">2</div>
+                    <div class="col">
+                        <h3>
+                            Get a demo application
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, tempore. Assumenda obcaecati modi culpa, cumque in natus voluptatum itaque?
+                        </p>
+                        <div class="link">
+                            <a href="#"><i class="fa-brands fa-apple"></i> App Store </a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="img/phone.png" alt="phone">
+                    </div>
                 </div>
                 <div class="row card border-radius">
                     <div class="col debug debug-col"> 2</div>
