[Edit] 1° section 2° card

--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
                     </div>
                 </div>
                 <div class="row card border-radius">
-                    <div class="col debug debug-col"> 2</div>
+                    <div class="col debug debug-col">
+                        <i class="fa-solid fa-file-code"></i>
+                        <h3>
+                            Clean Mode
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque modi odit ab ducimus iure ad provident optio cupiditate ex!
+                        </p>
+                    </div>
                 </div>
                 <div class="row card border-radius">
                     <div class="col debug debug-col"> 3</div>
