[Edit] 1° section- card

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="row card border-radius">
-                    <div class="col debug debug-col">
+                    <div class="col">
                         <i class="fa-solid fa-file-code"></i>
                         <h3>
                             Clean Mode
@@ -58,13 +58,37 @@
                     </div>
                 </div>
                 <div class="row card border-radius">
-                    <div class="col debug debug-col"> 3</div>
+                    <div class="col">
+                        <i class="fa-solid fa-compass-drafting"></i>
+                        <h3>
+                            Clean Mode
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque modi odit ab ducimus iure ad provident optio cupiditate ex!
+                        </p>
+                    </div>
                 </div>
                 <div class="row card border-radius">
-                    <div class="col debug debug-col"> 4</div>
+                    <div class="col">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <h3>
+                            Clean Mode
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque modi odit ab ducimus iure ad provident optio cupiditate ex!
+                        </p>
+                    </div>
                 </div>
                 <div class="row card border-radius">
-                    <div class="col debug debug-col"> 5</div>
+                    <div class="col">
+                        <i class="fa-solid fa-bullhorn"></i>
+                        <h3>
+                            Clean Mode
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque modi odit ab ducimus iure ad provident optio cupiditate ex!
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
