--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Kanit:wght@300&family=Open+Sans:wght@400;500;800&family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Responsive layout</title>
 </head>
@@ -93,14 +93,35 @@
             </div>
         </section>
         <section>  <!-- 2° SECTION -->
-            <div class="first container">
+            <div class="container">
                 <div class="row">
-                    <div class="col debug debug-first-col">1</div>
-                    <div class="col debug debug-first-col">2</div>
+                    <div class="col">
+                        <img src="img/planning1.png" alt="">
+                    </div>
+                    <div class="col">
+                        <h2>
+                           Strategic Planning 
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio iusto distinctio rerum dolore aut, itaque nisi rem dolorum voluptas reprehenderit?
+                        </p>
+                    </div>
                 </div>
                 <div class="row border-radius">
-                    <div class="col debug debug-first-col">1</div>
-                    <div class="col debug debug-first-col">2</div>
+                    <div class="col">
+                        <img src="img/planning2.png" alt="">
+                    </div>
+                    <div class="col">
+                        <h2>
+                            App Developement 
+                         </h2>
+                         <p>
+                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio iusto distinctio rerum dolore aut, itaque nisi rem dolorum voluptas reprehenderit?
+                         </p>
+                         <div class="link">
+                            <a href="#"><i class="fa-solid fa-arrow-down"></i></a>
+                         </div>
+                    </div>
                 </div>
             </div>
         </section>
