[Edit] 3° section - 1° card

--- a/index.html
+++ b/index.html
@@ -128,12 +128,28 @@
         <section>  <!-- 3° SECTION -->
             <div class="container">
                 <div class="row">
-                    <div class="col debug debug-col">1</div>
+                    <div class="col debug debug-col">
+                        <span>
+                            TESTIMONIALS
+                        </span>
+                        <h1>
+                            We are committed expert partners
+                        </h1>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto alias aliquid voluptas commodi adipisci. Delectus beatae distinctio deserunt repudiandae magnam?
+                        </p>
+                    </div>
                 </div>
                 <div class="row border-radius debug flex direction">
                     <div class="card">
-                        <div class="col debug debug-col-circle">1</div>
-                        <div class="col debug debug-col">2</div>
+                        <div class="col">
+                            <img src="img/testimonial1.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus repellendus amet dolorum iure fuga quasi? Exercitationem molestias beatae pariatur accusantium.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="row border-radius debug flex direction">
