[Edit] 3° section- card

--- a/index.html
+++ b/index.html
@@ -149,19 +149,40 @@
                             <p>
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus repellendus amet dolorum iure fuga quasi? Exercitationem molestias beatae pariatur accusantium.
                             </p>
+                            <span>
+                                NAT REYNOLDS
+                            </span>
                         </div>
                     </div>
                 </div>
                 <div class="row border-radius debug flex direction">
                     <div class="card">
-                        <div class="col debug debug-col-circle">1</div>
-                        <div class="col debug debug-col">2</div>
+                        <div class="col">
+                            <img src="img/testimonial2.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus repellendus amet dolorum iure fuga quasi? Exercitationem molestias beatae pariatur accusantium.
+                            </p>
+                            <span>
+                                CECILIA ALMENDA
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <div class="row border-radius debug flex direction">
                     <div class="card">
-                        <div class="col debug debug-col-circle">1</div>
-                        <div class="col debug debug-col">2</div>
+                        <div class="col">
+                            <img src="img/testimonial3.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus repellendus amet dolorum iure fuga quasi? Exercitationem molestias beatae pariatur accusantium.
+                            </p>
+                            <span>
+                                BOB ROBERTS
+                            </span>
+                        </div>
                     </div>
                 </div>
 
