[Edit] 4° section-card

--- a/index.html
+++ b/index.html
@@ -192,38 +192,107 @@
             <div class="container">
                 <div class="row border-radius">
                     <div class="col debug debug-small-col">
-                        1
+                        <h1>
+                            Benefits of working with us
+                        </h1>
                     </div>
                 </div>
                 <div class="cards">
+
                     <div class="row card border-radius">
-                        <div class="col debug debug-col">
-                            2
+                        <div class="col">
+                            <h1>
+                                01
+                            </h1>
+                            <h2>
+                                Hight Quality
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                            </p>
+                            <div class="link">
+                                <a href="#">more</a>
+                            </div>
                         </div>
                     </div>
                     <div class="row card border-radius">
-                        <div class="col debug debug-col">
-                            3
+                        <div class="col">
+                            <h1>
+                                02
+                            </h1>
+                            <h2>
+                                Creative Team
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                            </p>
+                            <div class="link">
+                                <a href="#">more</a>
+                            </div>
                         </div>
                     </div>
                     <div class="row card border-radius">
-                        <div class="col debug debug-col">
-                            4
+                        <div class="col">
+                            <h1>
+                                03
+                            </h1>
+                            <h2>
+                                Amaziong Results
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                            </p>
+                            <div class="link">
+                                <a href="#">more</a>
+                            </div>
                         </div>
                     </div>
                     <div class="row card border-radius">
-                        <div class="col debug debug-col">
-                            5
+                        <div class="col">
+                            <h1>
+                                04
+                            </h1>
+                            <h2>
+                                Best Pricing
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                            </p>
+                            <div class="link">
+                                <a href="#">more</a>
+                            </div>
                         </div>
                     </div>
                     <div class="row card border-radius">
-                        <div class="col debug debug-col">
-                            6
+                        <div class="col">
+                            <h1>
+                                05
+                            </h1>
+                            <h2>
+                                Innovations
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                            </p>
+                            <div class="link">
+                                <a href="#">more</a>
+                            </div>
                         </div>
                     </div>
                     <div class="row card border-radius">
-                        <div class="col debug debug-col">
-                            7
+                        <div class="col">
+                            <h1>
+                                06
+                            </h1>
+                            <h2>
+                                24/7 Support
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                            </p>
+                            <div class="link">
+                                <a href="#">more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
